home-lab-prox-mox/aws-installation/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: awx-service
  namespace: awx
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8052
      nodePort: 30080  # Choose an available port in the range of 30000-32767
  selector:
    app.kubernetes.io/name: awx-demo-web
