home-lab-prox-mox/aws-installation/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-demo-ingress
  namespace: awx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: awx.egrand.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: awx-demo-postgres-15
            port:
              number: 5432
